@@ -1,13 +1,13 @@
 Package: Matrix
 Version: 0.9996875-4
-Date: 2011-09-..
+Date: 2011-09-15
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
     operations on them using Lapack and SuiteSparse.
-Depends: R (>= 2.10.0), stats, methods, utils, lattice
+Depends: R (>= 2.12.0), stats, methods, utils, lattice
 Imports: graphics, grid
 Suggests: expm
 Enhances: MatrixModels, graph, SparseM (>= 0.87), sfsmisc
