@@ -1,3 +1,10 @@
+2011-09-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/bandSparse.R (bandSparse): and
+	* R/sparseMatrix.R (sparseMatrix): add 'giveCsparse = TRUE'
+	argument and allow returning Tsparse*, useful e.g. when used in
+	bdiag().
+
 2011-08-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* NAMESPACE: export diagN2U() & diagU2N(). They were "missing" for
